# CS-568

./: .gitignore  AGENTS.md  PLANS.md  README.md  Start.bat  human-eval.md  run-test.bat  user-eval-guide.md  wrangler.toml
backend/: .env.example  __init__.py  app.py  pyproject.toml
backend/core/: __init__.py
backend/core/ingest/: __init__.py  builders.py  contracts.py  docling_pdf.py  grobid_pdf.py  grobid_service.py  llm_semantic.py  opendataloader_pdf.py  pdf.py  providers.py  semantic.py
backend/core/models/: __init__.py  pdf_document.py
backend/core/representations/: __init__.py  jobs.py  keywords.py  llm.py  summaries.py
backend/scripts/: __init__.py  human_eval_config.example.json  prepare_human_eval_document.py
backend/tests/: test_human_study_designer.py  test_pdf_ingest.py
frontend/: index.html  package-lock.json  package.json
frontend/public/: _redirects
frontend/public/study-cache/: manifest.json
frontend/src/: App.jsx  representationSettings.js  styles.css
frontend/src/components/: DesignerPage.jsx  ExamDesignerPage.jsx  ExamPage.jsx  LandingPage.jsx  PdfReaderCanvas.jsx  QuizPanel.jsx  ReaderPage.jsx  ResultsPage.jsx  StudyPage.jsx
frontend/src/overlays/: buildPageOverlays.js  rules.js
functions/api/study/: health.js  score-submit.js
human-study/: README.md  requirements.md  scheduler.json
human-study/exams/: wikiworkshop-keywords-example.json  wikiworkshop-summary-example.json
human-study/scripts/: 1_extract_document.py  2_generate_representations.py  3_export_cloudflare.py  study_pipeline.py
scripts/: export_study_cache.py
(+49 files in other folders)
